--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -1,4 +1,8 @@
-<div class="skills">
+
+
+    
+<div class="skills flexcol">
+    <a class="create-skill" title="Add new skill">New Skill</a>
     <div class="skills-header grid grid-5col">
         <span class="skillItem">SKILL</span>
         <span class="skillItem">CHAR</span>
@@ -6,9 +10,60 @@
         <span class="skillItem">TEMP</span>
         <span class="skillItem">TOTAL</span>
     </div>
-   
-    {{#each data.skills as |skill key|}}
 
+    {{#each data.sortedSkills as |skill key|}}
+    {{#if (isdefined skill.specialties)}}
+     <div class="skills-header grid grid-5col">
+        <span class="skillItem">{{skill.name}}</span>
+       <span hidden></span>
+         <span hidden></span>
+         <span hidden></span>
+         <span hidden></span>
+
+
+    </div>
+    {{#each skill.specialties as |spec a|}}
+    <div class="skills-header grid grid-5col">
+        <span class="skillSubItem" padding-left="10px">{{spec.name}}</span>
+        <select  class="skillItem" name="data.skills.{{key}}.specialties.{{a}}.characteristic">
+            {{#select spec.characteristic}}
+            <option value="ws">WS</option>
+            <option value="bs">BS</option>
+            <option value="s">S</option>
+            <option value="t">T</option>
+            <option value="ag">AG</option>
+            <option value="int">INT</option>
+            <option value="per">PER</option>
+            <option value="wp">WP</option>
+            <option value="fel">FEL</option>
+            {{/select}}
+        </select>
+        <select  class="skillItem" name="data.skills.{{key}}.specialties.{{a}}.value">
+            {{#select spec.value}}
+            <option value="-20">Untrained</option>
+            <option value="0">Known</option>
+            <option value="10">Trained</option>
+            <option value="20">Experienced</option>
+            <option value="30">Veteran</option>
+            {{/select}}
+        </select>
+        <input  class="skillItem" type="text" name="data.skills.{{key}}.specialties.{{a}}.mod" value="{{spec.mod}}" data-dtype="Number"/>
+
+        <span class="rollable skillItem" data-roll="d100<data.skills.{{key}}.specialties.{{a}}.total" data-label="{{a}}">{{spec.total}}</span>
+
+
+    </div>
+    {{/each}}
+    <div class="skills-header grid grid-5col">
+        <span class="skillItem"></span>
+       <span hidden></span>
+          <span  hidden></span>
+         <span  hidden></span>
+          <span  hidden></span>
+
+
+    </div>
+    {{else}}
     <div class="skills-header grid grid-5col">
         <span class="skillItem">{{skill.name}}</span>
         <select  class="skillItem" name="data.skills.{{key}}.characteristic">
@@ -34,10 +89,12 @@
             {{/select}}
         </select>
         <input  class="skillItem" type="text" name="data.skills.{{key}}.mod" value="{{skill.mod}}" data-dtype="Number"/>
-        
-            <span class="rollable skillItem" data-roll="d100<@skills.{{key}}.total" data-label="{{key}}">{{skill.total}}</span>
-        
 
-    </div>  
+        <span class="rollable skillItem" data-roll="d100<@skills.{{key}}.total" data-label="{{key}}">{{skill.total}}</span>
+
+
+    </div>
+   
+    {{/if}}
     {{/each}}
 </div>
