--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -19,7 +19,7 @@
             </select>
         </div>
         <div class="flexcol">
-            <label>Has Specialties:</label>
+            <label>Specialisations:</label>
         <input id="children" type="checkbox" class="skill-children" name="data.hasChildren.value" {{#if (compareString data.parent.value "empty")}} {{checked data.hasChildren.value}}{{else}} disabled {{/if}}>
         </div>
         <div class="flexcol">
