--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -26,6 +26,11 @@
         <a class="skillItem item-delete" title="Delete Skill" data-item-id="{{skill._id}}"></a>
 
     </div>
+    <div class="skills-header flexrow">
+        <span class="skillItem gap"></span>
+    
+
+    </div>
     {{#each ../actor.skills as |spec a|}}
     
    
