--- a/templates/actor/dialogs/actor-newskill-dialog.html
+++ b/templates/actor/dialogs/actor-newskill-dialog.html
@@ -47,7 +47,7 @@
             <option value="bs">Ballistic Skill</option>
             <option value="s">Strength</option>
             <option value="t">Toughness</option>
-            <option value="ag">Agility</option>
+            <option value="agi">Agility</option>
             <option value="int">Intelligence</option>
             <option value="per">Perception</option>
             <option value="wp">Willpower</option>
