--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -6,6 +6,16 @@
     font-family: "CaslonAntique";
     src: url('../fonts/CaslonAntique.ttf');
 }
+@font-face {
+    font-family: "CaslonAntique";
+    src: url('../fonts/CaslonAntique-Bold.ttf');
+    font-weight:bold;
+}
+@font-face {
+    font-family: "CaslonAntique";
+    src: url('../fonts/CaslonAntique-Italic.ttf');
+    font-weight:italic;
+}
 .fortyk{
     font-size:14px;
     font-family: "CaslonAntique";
@@ -314,6 +324,10 @@
     width:100%;
     height:100%;
 
+}
+.fortyk .skills .skills-header .skill-group{
+    font-weight: bold !important;
+    text-transform: uppercase;
 }
 
 .fortyk .skills .skills-header .skillSubItem{
