--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -1,4 +1,6 @@
-<div class="chat-message flexcol">
+
+<div class="fortyk chat-message flexcol">
+    
     <span class="chat-line">{{title}}</span>
     <div class="flexrow">
         <span class="chat-line">{{rollResult}}</span>
@@ -6,4 +8,5 @@
     </div>
     <span class="chat-line">{{pass}}</span>
     <span class="roll-result">{{dos}}</span>
+    
 </div>
